--- a/dnd_site/templates/dnd_site/base.html
+++ b/dnd_site/templates/dnd_site/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{title}}</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'dnd_site/images/favicon.ico' %}"/>
     <link type = "text/css" href="{% static 'dnd_site/css/styles.css' %}" rel="stylesheet" />
 </head>
 <body>
